# pplt-svn

PPLT/: CHANGELOG  ChangeLog  HACKING  MANIFEST  MANIFEST.in  ModuleDB.xml  PPLT.System.html  PPLT.conf  PPLTConsole.py  PPLT_PostInstall.py  README  TODO  UserDB.xml  help-de.chm  help-de.htb  help-en.chm  help-en.htb  setup.cfg  setup.py
PPLT/Doc/: Makefile  pplt-logo.tex  pyDCPU Core-Reference.tex
PPLT/I18N/: PPLT-de.po  PPLT.pot  messages.pot  test.py
PPLT/Modules/: Makefile
PPLT/PPLT/: AliasTable.py  Configuration.py  DataBase.py  Device.py  DeviceDescription.py  DeviceMeta.py  Exceptions.py  Install.py  InstallSet.py  InstallSource.py  LoadSession.py  Logging.py  MasterTreeShell.py  Module.py  NameCheck.py  PPLTSystem.py  Server.py  ServerDescription.py  ServerMeta.py  Setup.py  SymbolTreeShell.py  Version.py  __init__.py  _vimrc  example.xml  example1.xml  ppltTest.py  targets.txt  test2.py  test3.py
PPLT/Scripts/: AddSymbolDialog.py  DevicePanel.py  DeviceSelectionDialog.py  LoadBitmaps.py  LogWindow.py  MainPanel.py  ModusBox.py  NAIS.py  NoteBook.py  PPLTC.py  PPLTMod.py  PPLTModInstall.py  PPLTUsers.py  ServerPanel.py  ServerParameterDialog.py  ServerSelectionDialog.py  SymbolTreePanel.py  ToolMenu.py  UserDBPanel.py
PPLT/Web/: .htaccess  index.de.html  index.html  index.php  main.css  menu.de.php  menu.en.php  mylib.php  print.css  template.html  url.txt
PPLT2/: AUTHORS  Changelog  Core.py  Enums.py  Exceptions.cpp  Exceptions.cs  Exceptions.h  Exceptions.py  INSTALL  InnerModule.cs  InnerModule.py  Ioctl.cs  Logging.cpp  Logging.cs  Logging.h  MANIFEST.in  Makefile  Makefile.am  Makefile.in  Message.cs  Message.py  MessageQueue.cs  PPLT2.mdp  PPLT2.mds  PPLT2.pida  PPLT2.prj  PPLT2.prj.bak  PPLT2.pws  PPLTCore.cs  README  Symbol.cs  TODO  Termios.cs  UML.xmi  aclocal.m4  cConnection.cpp  cConnection.h  cDisposable.cpp  cDisposable.h  cInnerModule.cpp  (+30 more)
PPLT2/Mods/: HexDump.cs  Random.cs
PPLT2/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
PPLT2/core/: AsyncStreamConnection.py  Connection.py  ConnectionDatabase.py  CoreModuleMeta.py  Exceptions.py  Importer.py  InnerModule.py  Interfaces.py  Makefile  Module.py  ModuleMeta.py  Object.py  SequenceConnection.py  StreamConnection.py  __init__.py
PPLT2/doc/: Concept  Doxyfile
PPLT2/doc/Handbuch/: index.tex  mod-tree.eps  mod-tree.odg  mod-tree2.eps  mod-tree2.odg  osi-handy-time.eps  osi-handy-time.odg
PPLT2/include/: Exceptions.h  HexDumpModule.h  Logging.h  LoopbackModule.h  Makefile  Makefile.am  Makefile.in  NULLModule.h  RandomModule.h  cConnection.h  cDisposable.h  cFloatConnection.h  cFloatSymbol.h  cInnerModule.h  cIntegerConnection.h  cIntegerSymbol.h  cModule.h  cObject.h  cSequenceConnection.h  cStreamConnection.h  cStreamSymbol.h  cSymbol.h  cValueConnection.h  iFloatModule.h  iIntegerModule.h  iSequenceModule.h  iStreamModule.h  soModuleLoader.h
PPLT2/include/plugins/: HexDumpModule.h  LoopbackModule.h  NULLModule.h  RandomModule.h
PPLT2/libppltcore/: Exceptions.cpp  Exceptions.h  LogOutputter.cpp  Logging.cpp  Logging.h  Makefile.in  Portability.cpp  Portability.h  cAsyncStreamConnection.cpp  cAsyncStreamConnection.h  cConnection.cpp  cConnection.h  cDisposable.cpp  cDisposable.h  cFloatConnection.cpp  cFloatConnection.h  cInnerModule.cpp  cInnerModule.h  cIntegerConnection.cpp  cIntegerConnection.h  cModule.cpp  cModule.h  cObject.cpp  cObject.h  cPyModule.h  cSecurityContext.cpp  cSecurityContext.h  cSequenceConnection.cpp  cSequenceConnection.h  cStreamConnection.cpp  cStreamConnection.h  cStreamSymbol.cpp  cStreamSymbol.h  cSymbol.cpp  cSymbol.h  cValueConnection.cpp  cValueConnection.h  config.h.in  configure.ac  iFloatModule.h  (+14 more)
PPLT2/libppltcore/doc/: Doxyfile
PPLT2/libwxpplt/: Makefile.in
PPLT2/modules/: reflection.xml  sequence_reflection.xml  stream_dump.xml  stream_hexlify.xml  stream_reflection.xml  test_assembly.xml
PPLT2/modules/debugging-modules/: ReflectionModule.py  SequenceReflectionModule.py  StreamDumpModule.py  StreamHexlifyModule.py
PPLT2/plugins/: HexDumpModule.cc  HexDumpModule.cpp  HexDumpModule.h  HexifierModule.cc  HexifierModule.h  LoopbackModule.cc  LoopbackModule.cpp  LoopbackModule.h  Makefile  Makefile.in  NULLModule.cc  NULLModule.cpp  NULLModule.h  RandomModule.cc  RandomModule.cpp  RandomModule.h  SerialInterfaceModule.cpp  SerialInterfaceModule.h  TimeModule.cc  TimeModule.h  configure.ac  plugins.pro
PPLT2/plugins/src/: HexDumpModule.cc  HexDumpModule.h  LoopbackModule.h  Makefile  NULLModule.cc  RandomModule.h  TimeModule.cc  TimeModule.h
PPLT2/po/: POTFILES.in
PPLT2/pplt/: .svnignore  Assembly.py  AssemblyMeta.py  ConnectionDatabase.py  CoreModuleMeta.py  Exceptions.py  Importer.py  InnerModule.py  Interfaces.py  Module.py  ModuleMeta.py  SequenceConnection.py  StreamConnection.py  Tools.py  ValueConnection.py  __init__.py
PPLT2/src/: Exceptions.cpp  HexDumpModule.cpp  Logging.cpp  LoopbackModule.cpp  Makefile  Makefile.am  Makefile.in  NULLModule.cpp  RandomModule.cpp  cConnection.cpp  cDisposable.cpp  cFloatConnection.c  cFloatConnection.cpp  cFloatSymbol.cpp  cInnerModule.cpp  cIntegerConnection.cpp  cIntegerSymbol.cpp  cModule.cpp  cObject.cpp  cSequenceConnection.cpp  cStreamConnection.cpp  cStreamSymbol.cpp  cSymbol.cpp  cValueConnection.cpp  iIntegerModule.cpp  iSequenceModule.cpp  iStreamModule.cpp  main.cc  soModuleLoader.cc
PPLT2/src/plugins/: LoopbackModule.cpp
PPLT2/test/: CoreModuleTest.cc  CoreModuleTest.h  Makefile.in  PortabilityTest.cc  PortabilityTest.h  README  configure.ac  libPPLTCoreTest.cc  libPPLTCoreTest.h  main.cc  main.cxx  ppltTest.cpp  ppltTest.h  run_test.py  soModuleLoaderTest.cc  soModuleLoaderTest.h  test.bkl  test.pro  testAssemblyMeta.py  testAsyncStreamConnection.py  testConnection.py  testCoreModuleMeta.py  testImporter.py  testInnerModule.py  testModuleMeta.py  testSequenceConnection.py  testSequenceReflectionModule.py  testStreamConnection.py  testStreamDumpModule.py  testStreamHexlifyModule.py
PPLT2/trex/: trex_assembly.xml  trex_module.xml
(+733 files in other folders)
