## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

pplt2_includedir = $(pkgincludedir)

pplt2_include_DATA = \
	Exceptions.h\
	Logging.h\
	cConnection.h\
	cDisposable.h\
	cInnerModule.h\
	cIntegerConnection.h\
	cModule.h\
	cObject.h\
	cSequenceConnection.h\
	cStreamConnection.h\
	cSymbol.h\
	cValueConnection.h\
	iIntegerModule.h\
	iSequenceModule.h\
	iStreamModule.h\
	HexDumpModule.h\
	LoopbackModule.h\
	NULLModule.h\
	RandomModule.h\
	cStreamSymbol.h

EXTRA_DIST = $(pplt2_include_DATA)
