## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =

AM_CXXFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = pplt2

pplt2_SOURCES = \
	main.cc\
	Exceptions.cpp\
	Logging.cpp\
	cConnection.cpp\
	cDisposable.cpp\
	cInnerModule.cpp\
	cIntegerConnection.cpp\
	cModule.cpp\
	cObject.cpp\
	cSequenceConnection.cpp\
	cStreamConnection.cpp\
	cSymbol.cpp\
	cValueConnection.cpp\
	HexDumpModule.cpp\
	LoopbackModule.cpp\
	NULLModule.cpp\
	RandomModule.cpp\
	cStreamSymbol.cpp

pplt2_LDFLAGS = \
	-llog4cplus -rdynamic -liberty

pplt2_LDADD = 

